# sdm_tools

./: .gitignore  .pre-commit-config.yaml  README.md  SConstruct  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  build_docs.yaml  docstyle.yaml
doc/: conf.py  index.rst  manifest.yaml
doc/changes/: DM-48803.feature.rst  DM-53392.misc.rst
doc/lsst.sdm.tools/: CHANGES.rst  index.rst
python/lsst/: __init__.py
python/lsst/sdm/tools/: __init__.py  _band_column_checker.py  _build_datalink_metadata.py  band_column_checker.py  cli.py
python/lsst/sdm_tools/: __init__.py  band_column_checker.py  build_datalink_metadata.py  cli.py
tests/: test_import.py
ups/: sdm_tools.table
